massive rewrite of R code to use 'phylobase' rather than 'ape' as foundation; added new abundance-based phylodiversity indices. note that rewrite is incomplete for old functionality now deemed lower priority.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/ecopd@5 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1
 Date: 2008-09-03
 Author: Jim Regetz, Marc Cadotte, Jonathan Davies
 Maintainer: Jim Regetz <regetz@nceas.ucsb.edu>
-Depends: ape
+Depends: ape, phylobase
 Description: Does stuff
 License: TBD
 LazyLoad: yes
