--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,26 +1,33 @@
-S3method(subset, phylo)
-S3method(print, ecophylo)
-
 export(abundance)
 export(`abundance<-`)
 export(minTL)
 export(`minTL<-`)
 
 export(caterpillar)
-export(doByCommunity)
-export(ecoPD)
-export(ecophylo)
 export(commPD)
 export(genera)
 export(getMinTL)
 export(pd)
-export(print.ecophylo)
 export(richness)
 export(siteBySpecies)
-export(subset.phylo)
-export(tipLengths)
 export(weightByAbund)
 
 export(Families)
 export(LookupTL)
 export(Supertree)
+
+export(phylo4com)
+export(pd)
+export(ancestralEdgeLength)
+export(nodes)
+export(PAE)
+export(IAC)
+export(ED)
+export(EED)
+export(HED)
+export(AED)
+export(EAED)
+export(HAED)
+export(value)
+
+#importMethodsFrom(phylobase, subset)
