updated DESCRIPTION file
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/ecopd@35 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -6,7 +6,8 @@ Date: 2008-09-03
 Author: Jim Regetz, Marc Cadotte, Jonathan Davies
 Maintainer: Jim Regetz <regetz@nceas.ucsb.edu>
 Depends: ape, phylobase
-Description: Does stuff
-License: TBD
+Description: A set of metrics and functions for combining ecological and
+phylogenetic information
+License: GPL
 LazyLoad: yes
 LazyData: yes
