--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -6,8 +6,7 @@ Date: 2008-09-03
 Author: Jim Regetz, Marc Cadotte, Jonathan Davies
 Maintainer: Jim Regetz <regetz@nceas.ucsb.edu>
 Depends: ape, phylobase
-Description: A set of metrics and functions for combining ecological and
-phylogenetic information
+Description: A set of metrics and functions for combining ecological and phylogenetic information
 License: GPL
 LazyLoad: yes
 LazyData: yes
