--- a/branches/single-tree/DESCRIPTION
+++ b/branches/single-tree/DESCRIPTION
@@ -8,5 +8,6 @@ Maintainer: Jim Regetz <regetz@nceas.ucsb.edu>
 Depends: ape, phylobase
 Description: A set of metrics and functions for combining ecological and phylogenetic information
 License: GPL
+Collate: phylo4com.R utilities.R community.R pd.R ed.R iac.R pae.R simpson.R indices.R plots.R
 LazyLoad: yes
 LazyData: yes
