added 'methods' package dependency to DESCRIPTION
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/ecopd@68 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/branches/single-tree/DESCRIPTION
+++ b/branches/single-tree/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1
 Date: 2008-09-03
 Author: Jim Regetz, Marc Cadotte, Jonathan Davies
 Maintainer: Jim Regetz <regetz@nceas.ucsb.edu>
-Depends: ape, phylobase
+Depends: methods, phylobase
 Description: A set of metrics and functions for combining ecological and phylogenetic information
 License: GPL
 Collate: phylo4com.R utilities.R community.R pd.R ed.R iac.R pae.R simpson.R indices.R plots.R
