rewrote genera function as set of methods for phylo4 and phylo4com objects; updated documentation accordingly
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/ecopd@80 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/branches/single-tree/DESCRIPTION
+++ b/branches/single-tree/DESCRIPTION
@@ -8,6 +8,6 @@ Maintainer: Jim Regetz <regetz@nceas.ucsb.edu>
 Depends: methods, phylobase
 Description: A set of metrics and functions for combining ecological and phylogenetic information
 License: GPL
-Collate: phylo4com.R coerce.R utilities.R community.R pd.R aed.R iac.R pae.R simpson.R indices.R plots.R
+Collate: phylo4com.R coerce.R genera.R utilities.R community.R pd.R aed.R iac.R pae.R simpson.R indices.R plots.R
 LazyLoad: yes
 LazyData: yes
