implemented abundance-weighted pd calculation for phylo4com (but only using minimum tip lengths automatically inferred from Supertree, hence only valid for species represented therein)
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/ecopd@85 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/branches/single-tree/NAMESPACE
+++ b/branches/single-tree/NAMESPACE
@@ -34,8 +34,6 @@ export(siteBySpecies)
 # pd-related functions
 export(minTL)
 export(`minTL<-`)
-export(getMinTL)
-export(weightByAbund)
 
 # miscellaneous
 export(caterpillar)
@@ -46,3 +44,8 @@ export(LookupTL)
 export(Supertree)
 
 #----------------------------------------------------------------------
+
+# unexported functions
+#export(getSubtrees)
+#export(getMinTL)
+#export(weightByAbund)
