added function for calculating Shannon diversity index (non-phylo)
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/ecopd@94 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -15,7 +15,7 @@ exportMethods(phylo4com)
 
 # metric methods
 exportMethods(pd, pae, iac, ed, eed, hed, aed, eaed, haed, value)
-exportMethods(simpson)
+exportMethods(shannon, simpson)
 
 #----------------------------------------------------------------------
 
